Refactored Tree.java and AdminTreeMVCHandler - made getActivationSyndicator abstract so that each handler implements it accordint to the NodeTypes it handles. - Fixed bug http://jira.magnolia.info/browse/MAGNOLIA-915
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@3422 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f